Breaking up and prepping
Two classes required: NMRcalc to handle the data holding and calculations, and NMRdriver to process user input and writing to files and such. nmrfreq.py will still be the calling program, once everything else is in place.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+NEWFREQ BRANCH
+  Use argparse to handle all arguments
+
 IMMEDIATE
   Change tabular output file destination to user/config specified, or home
     if no path specified. Prevents clogging up file space. Maybe default to
